# FileSorter

./: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/icons/: icon.icns
